# PropFlow-AI

./: .gitignore  README.md  docker-compose.yml  how to start.txt  main.py  requirements.txt
ai/: __init__.py  pyproject.toml
ai/engine/: __init__.py  correlation_engine.py  gold_scalper.py  hybrid_engine.py  quant_engine.py
ai/features/: __init__.py  feature_pipeline.py  indicators.py
ai/regime/: hmm_detector.py
ai/utils/: __init__.py  rule_based_filters.py
backend/: Dockerfile  settings.json
backend/app/: main.py
backend/app/broker/: mt5_broker.py
backend/app/execution/: backtest_engine.py  execution_engine.py
backend/app/execution/backtest/: correlation_runner.py  gold_runner.py  hmm_runner.py  quant_runner.py
backend/app/execution/strategies/: correlation_handler.py  gold_handler.py  hmm_handler.py  quant_handler.py
backend/app/services/: risk_engine.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/backtest/: page.tsx
frontend/src/app/risk/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/charts/: EquityChart.tsx  PriceChart.tsx
frontend/src/components/dashboard/: ActiveTrades.tsx  MarketScanner.tsx  StatsCard.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/hooks/: useDashboardData.ts  useSystemStatus.ts
frontend/src/services/: api.ts
scripts/: start_all.sh
tests/: test_risk.py
