[project]
name = "propflow-ai"
version = "0.1.0"
description = "PropFlow AI - Hybrid FX Market Regime Detection & Decision Engine"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "hmmlearn>=0.3",
    "numba>=0.57",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"